Yak shave to fix a layout glitch moments after page load.
Was basically caused by layout<->scrollbar interaction loop. Fix was to
calculate size of scrollbar and take it into account during layout.

At the same time, I decided to clean up the code and put the search results
scrollbar actually within BlobItemContainer, rather than having
BlobItemContainer reach up and change scroll styles of document.

This necessitated getting rid of some of the clever transform origin
stuff I was doing before, but it is less needed now.

--- a/server/camlistored/ui/blob_item_container.css
+++ b/server/camlistored/ui/blob_item_container.css
@@ -22,7 +22,6 @@ limitations under the License.
 	transition: -webkit-transform 75ms ease-out;
 	transition: -moz-transform 75ms ease-out;
 	transition: -ms-transform 75ms ease-out;
-	margin-left: 36px;
 }
 
 .cam-blobitemcontainer.cam-dropactive {
